--- a/pages/8352.html
+++ b/pages/8352.html
@@ -393,7 +393,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a>, <a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a></p>
 </li>
 
 <li>
@@ -406,9 +406,21 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/chain+homology+and+cohomology'>chain homology and cohomology</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homological+resolution'>homological resolution</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></p>
+</li>
 </ul>
 </li>
 
@@ -848,7 +860,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#Existence'>Existence</a></li></ul></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/resolution'>resolution</a> of a <a class='existingWikiWord' href='/nlab/show/chain+complex'>chain complex</a> by a complex of <a class='existingWikiWord' href='/nlab/show/free+module'>free modules</a>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/homological+resolution'>homological resolution</a> of a <a class='existingWikiWord' href='/nlab/show/chain+complex'>chain complex</a> by a complex of <a class='existingWikiWord' href='/nlab/show/free+module'>free modules</a>.</p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -857,7 +869,7 @@ margin-left: 0em;
 <div class='num_prop'>
 <h6 id='proposition'>Proposition</h6>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_656d92bf5125c5d87307b0ec210092aff7405cfb_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/ring'>ring</a>, every <math class='maruku-mathml' display='inline' id='mathml_656d92bf5125c5d87307b0ec210092aff7405cfb_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/module'>module</a> admits a free resolution.</p>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/ring'>ring</a>, every <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/module'>module</a> admits a free resolution.</p>
 </div>
 
 <h2 id='examples'>Examples</h2>
@@ -865,20 +877,20 @@ margin-left: 0em;
 <div class='num_prop' id='AbelianGroupHasFreeResolutionOfLength2'>
 <h6 id='proposition_2'>Proposition</h6>
 
-<p>Assuming the <a class='existingWikiWord' href='/nlab/show/axiom+of+choice'>axiom of choice</a>, then every <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian group</a> <math class='maruku-mathml' display='inline' id='mathml_656d92bf5125c5d87307b0ec210092aff7405cfb_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> admits a free resolution of just length 2, hence with trivial <a class='existingWikiWord' href='/nlab/show/syzygy'>syzygies</a>, hence there exists a <a class='existingWikiWord' href='/nlab/show/exact+sequence'>short exact sequence</a> of abelian groups of the form</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_656d92bf5125c5d87307b0ec210092aff7405cfb_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>→</mo><msub><mi>F</mi> <mn>2</mn></msub><mo>⟶</mo><msub><mi>F</mi> <mn>1</mn></msub><mo>⟶</mo><mi>A</mi><mo>→</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
+<p>Assuming the <a class='existingWikiWord' href='/nlab/show/axiom+of+choice'>axiom of choice</a>, then every <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian group</a> <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> admits a free resolution of just length 2, hence with trivial <a class='existingWikiWord' href='/nlab/show/syzygy'>syzygies</a>, hence there exists a <a class='existingWikiWord' href='/nlab/show/exact+sequence'>short exact sequence</a> of abelian groups of the form</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>→</mo><msub><mi>F</mi> <mn>2</mn></msub><mo>⟶</mo><msub><mi>F</mi> <mn>1</mn></msub><mo>⟶</mo><mi>A</mi><mo>→</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
   0 \to F_2 \longrightarrow F_1 \longrightarrow A \to 0
 
 </annotation></semantics></math></div>
-<p>where both <math class='maruku-mathml' display='inline' id='mathml_656d92bf5125c5d87307b0ec210092aff7405cfb_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>F_1</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_656d92bf5125c5d87307b0ec210092aff7405cfb_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>F_2</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/free+abelian+group'>free abelian groups</a>.</p>
+<p>where both <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>F_1</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>F_2</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/free+abelian+group'>free abelian groups</a>.</p>
 </div>
 
 <div class='proof'>
 <h6 id='proof'>Proof</h6>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_656d92bf5125c5d87307b0ec210092aff7405cfb_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>1</mn></msub><mo>=</mo><mi>ℤ</mi><mo stretchy='false'>[</mo><mi>A</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>F_1 = \mathbb{Z}[A]</annotation></semantics></math> be the <a class='existingWikiWord' href='/nlab/show/free+abelian+group'>free abelian group</a> on the underlying <a class='existingWikiWord' href='/nlab/show/set'>set</a> of <math class='maruku-mathml' display='inline' id='mathml_656d92bf5125c5d87307b0ec210092aff7405cfb_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>, and let <math class='maruku-mathml' display='inline' id='mathml_656d92bf5125c5d87307b0ec210092aff7405cfb_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>1</mn></msub><mo>→</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>F_1 \to A</annotation></semantics></math> be the canonical morphism that sends a generator to itself (the <a class='existingWikiWord' href='/nlab/show/unit+of+an+adjunction'>adjunction counit</a> of the <a class='existingWikiWord' href='/nlab/show/free-forgetful+adjunction'>free-forgetful adjunction</a>).</p>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>1</mn></msub><mo>=</mo><mi>ℤ</mi><mo stretchy='false'>[</mo><mi>A</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>F_1 = \mathbb{Z}[A]</annotation></semantics></math> be the <a class='existingWikiWord' href='/nlab/show/free+abelian+group'>free abelian group</a> on the underlying <a class='existingWikiWord' href='/nlab/show/set'>set</a> of <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>, and let <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>1</mn></msub><mo>→</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>F_1 \to A</annotation></semantics></math> be the canonical morphism that sends a generator to itself (the <a class='existingWikiWord' href='/nlab/show/unit+of+an+adjunction'>adjunction counit</a> of the <a class='existingWikiWord' href='/nlab/show/free-forgetful+adjunction'>free-forgetful adjunction</a>).</p>
 
-<p>Then let <math class='maruku-mathml' display='inline' id='mathml_656d92bf5125c5d87307b0ec210092aff7405cfb_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>2</mn></msub><mo>→</mo><msub><mi>F</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>F_2 \to F_1</annotation></semantics></math> be the <a class='existingWikiWord' href='/nlab/show/kernel'>kernel</a> of that map, hence <math class='maruku-mathml' display='inline' id='mathml_656d92bf5125c5d87307b0ec210092aff7405cfb_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>F_2</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> of <math class='maruku-mathml' display='inline' id='mathml_656d92bf5125c5d87307b0ec210092aff7405cfb_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>F_1</annotation></semantics></math>. Assuming the <a class='existingWikiWord' href='/nlab/show/axiom+of+choice'>axiom of choice</a> then every <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> of a <a class='existingWikiWord' href='/nlab/show/free+abelian+group'>free abelian group</a> is itself free abelian, hence <math class='maruku-mathml' display='inline' id='mathml_656d92bf5125c5d87307b0ec210092aff7405cfb_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>F_2</annotation></semantics></math> is free abelian (<a href='free+abelian+group#SubgroupsOfFreeAbelianGroupsAreFree'>prop.</a>).</p>
+<p>Then let <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>2</mn></msub><mo>→</mo><msub><mi>F</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>F_2 \to F_1</annotation></semantics></math> be the <a class='existingWikiWord' href='/nlab/show/kernel'>kernel</a> of that map, hence <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>F_2</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> of <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>F_1</annotation></semantics></math>. Assuming the <a class='existingWikiWord' href='/nlab/show/axiom+of+choice'>axiom of choice</a> then every <a class='existingWikiWord' href='/nlab/show/subgroup'>subgroup</a> of a <a class='existingWikiWord' href='/nlab/show/free+abelian+group'>free abelian group</a> is itself free abelian, hence <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>F</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>F_2</annotation></semantics></math> is free abelian (<a href='free+abelian+group#SubgroupsOfFreeAbelianGroupsAreFree'>prop.</a>).</p>
 </div>
 
 <div class='num_remark'>
@@ -887,6 +899,14 @@ margin-left: 0em;
 <p>Prop. <a class='maruku-ref' href='#AbelianGroupHasFreeResolutionOfLength2'>2</a> implies that all <a class='existingWikiWord' href='/nlab/show/Ext'>Ext</a>-groups between abelian groups are concentrated in degrees 0 and 1.</p>
 
 <p>(By the discussion at <em><a class='existingWikiWord' href='/nlab/show/derived+functor+in+homological+algebra'>derived functor in homological algebra</a></em>.)</p>
+</div>
+
+<div class='num_example'>
+<h6 id='example'>Example</h6>
+
+<p><strong>(<a class='existingWikiWord' href='/nlab/show/Koszul+complex'>Koszul complex</a> is free resolution of <a class='existingWikiWord' href='/nlab/show/quotient+ring'>quotient ring</a>)</strong></p>
+
+<p>For <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/ring'>commutative ring</a> and <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>x</mi> <mi>d</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(x_1, \cdots, x_d)</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/regular+sequence'>regular sequence</a> of elements, then the <a class='existingWikiWord' href='/nlab/show/Koszul+complex'>Koszul complex</a> <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo stretchy='false'>(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>x</mi> <mi>d</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>K(x_1, \cdots, x_d)</annotation></semantics></math> is a free resolutions of the <a class='existingWikiWord' href='/nlab/show/quotient+ring'>quotient ring</a> <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi><mo stretchy='false'>/</mo><mo stretchy='false'>(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>⋯</mi><mo>,</mo><msub><mi>x</mi> <mi>d</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>R/(x_1, \cdots, x_d)</annotation></semantics></math> by free <math class='maruku-mathml' display='inline' id='mathml_50e9c7e4d131458280d7b970db0a72fabb21aa41_18' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>-modules.</p>
 </div>
 
 <h2 id='related_concepts'>Related concepts</h2>
@@ -944,14 +964,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July 13, 2016 10:47:07 
-  by <a class="existingWikiWord" href="/nlab/show/Ingo+Blechschmidt">Ingo Blechschmidt</a>
-  (137.250.162.16)
+  Revised on September 29, 2017 05:31:41 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (188.105.77.106)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/free+resolution" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/free+resolution/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/free+resolution" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/free+resolution" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/free+resolution" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/free+resolution/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/free+resolution" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/free+resolution" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
