--- a/pages/8222.html
+++ b/pages/8222.html
@@ -393,7 +393,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a>, <a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a></p>
 </li>
 
 <li>
@@ -406,9 +406,21 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/chain+homology+and+cohomology'>chain homology and cohomology</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homological+resolution'>homological resolution</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></p>
+</li>
 </ul>
 </li>
 
@@ -701,20 +713,20 @@ margin-left: 0em;
 <div class='num_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_46347d6c154c562ca6b0760f5bf724976f3bd952_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_46347d6c154c562ca6b0760f5bf724976f3bd952_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℬ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{B}</annotation></semantics></math> be two <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian categories</a>.</p>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_92e3b9b1f6bb2ef7f5990aa1d2ff257b5856d988_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_92e3b9b1f6bb2ef7f5990aa1d2ff257b5856d988_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℬ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{B}</annotation></semantics></math> be two <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian categories</a>.</p>
 
-<p>A <strong>homological <math class='maruku-mathml' display='inline' id='mathml_46347d6c154c562ca6b0760f5bf724976f3bd952_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>δ</mi></mrow><annotation encoding='application/x-tex'>\delta</annotation></semantics></math>-functor</strong> from <math class='maruku-mathml' display='inline' id='mathml_46347d6c154c562ca6b0760f5bf724976f3bd952_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_46347d6c154c562ca6b0760f5bf724976f3bd952_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℬ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{B}</annotation></semantics></math> is for each <math class='maruku-mathml' display='inline' id='mathml_46347d6c154c562ca6b0760f5bf724976f3bd952_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/functor'>functor</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_46347d6c154c562ca6b0760f5bf724976f3bd952_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mi>n</mi></msub><mo>:</mo><mi>𝒜</mi><mo>→</mo><mi>ℬ</mi></mrow><annotation encoding='application/x-tex'>
+<p>A <strong>homological <math class='maruku-mathml' display='inline' id='mathml_92e3b9b1f6bb2ef7f5990aa1d2ff257b5856d988_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>δ</mi></mrow><annotation encoding='application/x-tex'>\delta</annotation></semantics></math>-functor</strong> from <math class='maruku-mathml' display='inline' id='mathml_92e3b9b1f6bb2ef7f5990aa1d2ff257b5856d988_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> to <math class='maruku-mathml' display='inline' id='mathml_92e3b9b1f6bb2ef7f5990aa1d2ff257b5856d988_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℬ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{B}</annotation></semantics></math> is for each <math class='maruku-mathml' display='inline' id='mathml_92e3b9b1f6bb2ef7f5990aa1d2ff257b5856d988_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/functor'>functor</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_92e3b9b1f6bb2ef7f5990aa1d2ff257b5856d988_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mi>n</mi></msub><mo>:</mo><mi>𝒜</mi><mo>→</mo><mi>ℬ</mi></mrow><annotation encoding='application/x-tex'>
   T_n : \mathcal{A} \to \mathcal{B}
 
 </annotation></semantics></math></div>
-<p>equipped for each <a class='existingWikiWord' href='/nlab/show/exact+sequence'>short exact sequence</a> <math class='maruku-mathml' display='inline' id='mathml_46347d6c154c562ca6b0760f5bf724976f3bd952_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>→</mo><mi>A</mi><mo>→</mo><mi>B</mi><mo>→</mo><mi>C</mi><mo>→</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>0 \to A \to B \to C \to 0</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_46347d6c154c562ca6b0760f5bf724976f3bd952_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> with a <a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformation</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_46347d6c154c562ca6b0760f5bf724976f3bd952_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>δ</mi> <mi>n</mi></msub><mo>:</mo><msub><mi>T</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>C</mi><mo stretchy='false'>)</mo><mo>→</mo><msub><mi>T</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<p>equipped for each <a class='existingWikiWord' href='/nlab/show/exact+sequence'>short exact sequence</a> <math class='maruku-mathml' display='inline' id='mathml_92e3b9b1f6bb2ef7f5990aa1d2ff257b5856d988_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>→</mo><mi>A</mi><mo>→</mo><mi>B</mi><mo>→</mo><mi>C</mi><mo>→</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>0 \to A \to B \to C \to 0</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_92e3b9b1f6bb2ef7f5990aa1d2ff257b5856d988_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>\mathcal{A}</annotation></semantics></math> with a <a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformation</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_92e3b9b1f6bb2ef7f5990aa1d2ff257b5856d988_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>δ</mi> <mi>n</mi></msub><mo>:</mo><msub><mi>T</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>C</mi><mo stretchy='false'>)</mo><mo>→</mo><msub><mi>T</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   \delta_n : T_n(C) \to T_{n-1}(A)
 
 </annotation></semantics></math></div>
 <p>such that for each such short exact sequence there is, <a class='existingWikiWord' href='/nlab/show/natural+transformation'>naturally</a> a <a class='existingWikiWord' href='/nlab/show/exact+sequence'>long exact sequence</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_46347d6c154c562ca6b0760f5bf724976f3bd952_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>⋯</mi><msub><mi>T</mi> <mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msub><mo stretchy='false'>(</mo><mi>C</mi><mo stretchy='false'>)</mo><mover><mo>→</mo><mi>δ</mi></mover><msub><mi>T</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo>→</mo><msub><mi>T</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>B</mi><mo stretchy='false'>)</mo><mo>→</mo><msub><mi>T</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>C</mi><mo stretchy='false'>)</mo><mover><mo>→</mo><mi>δ</mi></mover><msub><mi>T</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo>→</mo><mi>⋯</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_92e3b9b1f6bb2ef7f5990aa1d2ff257b5856d988_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>⋯</mi><msub><mi>T</mi> <mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msub><mo stretchy='false'>(</mo><mi>C</mi><mo stretchy='false'>)</mo><mover><mo>→</mo><mi>δ</mi></mover><msub><mi>T</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo>→</mo><msub><mi>T</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>B</mi><mo stretchy='false'>)</mo><mo>→</mo><msub><mi>T</mi> <mi>n</mi></msub><mo stretchy='false'>(</mo><mi>C</mi><mo stretchy='false'>)</mo><mover><mo>→</mo><mi>δ</mi></mover><msub><mi>T</mi> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub><mo stretchy='false'>(</mo><mi>A</mi><mo stretchy='false'>)</mo><mo>→</mo><mi>⋯</mi><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
       \cdots T_{n+1}(C) \stackrel{\delta}{\to} T_n(A) \to T_n(B) \to T_n(C) \stackrel{\delta }{\to} T_{n-1}(A) \to \cdots
  \,.
 
@@ -723,11 +735,11 @@ margin-left: 0em;
 <h2 id='examples'>Examples</h2>
 
 <p>The archetypical example is the <a class='existingWikiWord' href='/nlab/show/chain+homology+and+cohomology'>chain homology</a> functor</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_46347d6c154c562ca6b0760f5bf724976f3bd952_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>H</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>:</mo><msub><mi>Ch</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mi>𝒜</mi><mo stretchy='false'>)</mo><mo>→</mo><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_92e3b9b1f6bb2ef7f5990aa1d2ff257b5856d988_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>H</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>:</mo><msub><mi>Ch</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mi>𝒜</mi><mo stretchy='false'>)</mo><mo>→</mo><mi>𝒜</mi></mrow><annotation encoding='application/x-tex'>
   H_\bullet(-) : Ch_\bullet(\mathcal{A}) \to \mathcal{A}
 
 </annotation></semantics></math></div>
-<p>from the <a class='existingWikiWord' href='/nlab/show/category+of+chain+complexes'>category of chain complexes</a> of some <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a> (for <math class='maruku-mathml' display='inline' id='mathml_46347d6c154c562ca6b0760f5bf724976f3bd952_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{N}</annotation></semantics></math>-graded complexes).</p>
+<p>from the <a class='existingWikiWord' href='/nlab/show/category+of+chain+complexes'>category of chain complexes</a> of some <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a> (for <math class='maruku-mathml' display='inline' id='mathml_92e3b9b1f6bb2ef7f5990aa1d2ff257b5856d988_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{N}</annotation></semantics></math>-graded complexes).</p>
 
 <p>The <em>universal</em> example are (non-total) <a class='existingWikiWord' href='/nlab/show/derived+functor'>right derived functors</a>.</p>
 
@@ -761,17 +773,23 @@ margin-left: 0em;
  
  
 </p>
+
+<p>
+ 
+ 
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on April 29, 2016 07:33:41 
+  Revised on September 29, 2017 20:00:16 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.220.184.222)
+  (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/delta-functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/delta-functor/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/delta-functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/delta-functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/delta-functor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/delta-functor/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/delta-functor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/delta-functor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
