--- a/pages/16984.html
+++ b/pages/16984.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -324,18 +324,22 @@ margin-left: 0em;
 <li>
 <p>Jared Weinstein, <em><a href='https://galoisrepresentations.wordpress.com/2013/08/12/the-fundamental-curve-of-p-adic-hodge-theory-part-ii/'>The Fundamental Curve of p-adic Hodge Theory, Part II</a></em></p>
 </li>
+
+<li>
+<p>Harvard Seminar on Fargues-Fontiane Curve (<a href='http://www.math.harvard.edu/~lurie/FF.html'>Informal Notes</a> by Lurie, Gaitsgory etc)</p>
+</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Created on November 30, 2015 13:05:52 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (78.104.9.22)
+  Revised on September 29, 2017 23:51:55 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (71.204.162.198)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fargues-Fontaine+curve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Fargues-Fontaine+curve" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fargues-Fontaine+curve/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Fargues-Fontaine+curve" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fargues-Fontaine+curve" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
