--- a/pages/5725.html
+++ b/pages/5725.html
@@ -326,21 +326,23 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Dennis+Gaitsgory'>D. Gaitsgory</a>, <a class='existingWikiWord' href='/nlab/show/Nick+Rozenblyum'>N. Rozenblyum</a>, <em><a class='existingWikiWord' href='/nlab/show/A+study+in+derived+algebraic+geometry'>A study in derived algebraic geometry</a></em>.</p>
 </li>
-</ul>
 
-<p>
+<li>
+<p>Informal notes on the <a class='existingWikiWord' href='/nlab/show/Fargues-Fontaine+curve'>Fargues-Fontaine curve</a> with <a class='existingWikiWord' href='/nlab/show/Jacob+Lurie'>Jacob Lurie</a>. 
 </p>
+</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Revised on October  6, 2015 09:41:29 
-  by <a class="existingWikiWord" href="/nlab/show/Adeel+Khan+Yusufzai">Adeel Khan</a>
-  (132.252.63.76)
+  Revised on September 30, 2017 01:23:51 
+  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
+  (2a01:cb04:5b1:2f00:b190:87b4:5767:5a5d)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dennis+Gaitsgory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dennis+Gaitsgory/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Dennis+Gaitsgory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dennis+Gaitsgory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Dennis+Gaitsgory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dennis+Gaitsgory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Dennis+Gaitsgory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dennis+Gaitsgory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
